# starter-leptos

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  netlify.toml  package.json  rust-toolchain.toml  tailwind.config.js
crates/leptos-tw-ui/: Cargo.toml
crates/leptos-tw-ui/src/: lib.rs
crates/leptos-tw-ui/src/components/: container.rs  footer.rs  header.rs  icons.rs  mod.rs  typography.rs
crates/leptos-tw-ui/src/components/buttons/: button.rs
crates/leptos-tw-ui/src/components/menu/: bars.rs
crates/leptos-tw-ui/src/components/theme/: toggle.rs
crates/leptos-tw-ui/src/components/variants/: base.rs
site/: Cargo.toml  index.html
site/src/: app.rs  main.rs  theme.rs
site/src/components/: buttons.rs
site/src/pages/: counter.rs  features.rs  home.rs  mod.rs  styleguide.rs
site/src/sections/: features.rs  hero.rs  mod.rs
style/: input.css
