[package]
name = "starter-site"
version = { workspace = true }
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70" }

console_error_panic_hook = { version = "0.1.7" }
console_log = { version = "1" }
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
leptos-tw-ui.workspace = true
leptos_meta = { version = "0.6.14", features = ["csr", "nightly"] }
leptos_router = { version = "0.6.14", features = ["csr", "nightly"] }
log = "0.4.22"
# [profile.release]
# lto = true
