[package]
name = "leptos-tw-ui"
version = { workspace = true }
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr", "nightly"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = [
    "Window",
    "HtmlElement",
    "Document",
    "Storage",
    "MediaQueryList",
] }
